Update RandomBotOnSteroids.java
Implemented fixes for RandomBotONSteroids from Jeppe